--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,24 @@
+/* フォントの追加 */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* @apply */
+/* クラスをまとめる */
+.btn {
+  @apply bg-blue-500 hover:bg-blue-400 text-white
+           font-semibold py-2 px-8 rounded-md mr-1;
+}
+
+/* @layer */
+/* 既存のタグを上書き */
+@layer base {
+  h1 {
+    @apply text-2xl text-center;
+  }
+  h2 {
+    @apply text-xl text-center;
+  }
+}
